Bug 1099074. Don't enable D2D1.1 with non-OMTC. r=bgirard,a=sylvestre

We're seeing a number of crashes caused by mixing D2D1.1
and D3D10 non-OMTC among people who have explicitly disabled
OMTC. This ensures we don't use D2D1.1 in that configuration.